--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dmitra/transform-data",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "repository": {
     "type": "git",
     "url": "https://github.com/dmitra/transform-data"
@@ -37,6 +37,6 @@
     "babel-jest": "^26.0.1",
     "eslint": "^7.2.0",
     "jest": "^26.0.1",
-    "parcel": "^2.0.0-alpha.3.2"
+    "parcel": "^2.0.0-beta.2"
   }
 }
